--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ dj-database-url==2.2.0
 psycopg2-binary==2.9.9
 openpyxl==3.1.5
 Pillow==10.4.0
+psycopg[binary]>=3.1,<3.3
+python-3.11.9
 # Opcional (monitoring de errores en prod):
 # sentry-sdk==2.12.0
